--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ display-news-banner: true
           Catch up on the latest technical insights and tools from the PyTorch community.
         </p>
         <p>
-          <a href="/blog">#Powered by PyTorch</a>
+          <a href="/blog">#Powered by PyTorch!!!!/a>
         </p>
       </div>
       <div class="col-md">
